Page now reflects visitors IP and User-Agent using EJS

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to the website.</h1>    
+    <h1>Welcome to the website.</h1> 
+    <br/>  
+    <p>Your IP: <%= ip %></p> 
+    <p>Your User-Agent: <%= headers %></p>
 </body>
 </html>
