Added new routes and linking on main page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,5 +10,7 @@
     <br/>  
     <p>Your IP: <%= ip %></p> 
     <p>Your User-Agent: <%= headers %></p>
+    <br/>
+    <p><a href="/signup">Signup</a>&nbsp;&nbsp;&nbsp;<a href="/login">Login</a></p>
 </body>
 </html>
