--- a/views/users/list.ejs
+++ b/views/users/list.ejs
@@ -11,6 +11,7 @@
     </style>
 </head>
 <body>
+    <h1>Current Users</h1>
     <% users.forEach(user => { %>
         <div class="user">
             <p><%= user.name %></p>
